--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,13 @@
 %html
   %head
     %title snappyco.de
+    
+    %link{ :rel => 'openid.server', :href => 'http://www.myopenid.com/server' }
+    %link{ :rel => 'openid.delegate', :href => 'http://www.myopenid.com/server' }
+    %link{ :rel => 'openid2.local_id', :href => 'http://davenewman.myopenid.com/' }
+    %link{ :rel => 'openid2.provider', :href => 'http://www.myopenid.com/server' }
+    %meta{ "http-equiv" => 'X-XRDS-Location', :href => 'http://www.myopenid.com/xrds?username=youraccount.myopenid.com' }
+    
     %link{ :href=>'/reset.css',  :type=> 'text/css', :rel=>'stylesheet' }
     %link{ :href=>'/screen.css', :type=> 'text/css', :rel=>'stylesheet' }
   %body
