Random styling and started a new post

--- a/views/index.haml
+++ b/views/index.haml
@@ -6,4 +6,4 @@
     %p.title-footer=" posted on #{post.date.to_s}"
   
     .content
-      =haml post.content, :layout => false
+      =write_post_content post
