--- a/views/screen.sass
+++ b/views/screen.sass
@@ -12,10 +12,15 @@ body
   :font
     :family "Helvetica Neue",Arial,Helvetica,sans-serif
 
+h1
+  :float left
+
 #tagline
   :float right
+  :color #343
 
 .post
+  :clear both
   :padding 20px
   :border-top solid 1px #666
   
@@ -30,3 +35,9 @@ body
     
   .content
     :clear both
+    p
+      :padding-bottom 1em
+    em
+      :font-style italic
+    strong
+      :font-weight bold
