--- a/views/layout.haml
+++ b/views/layout.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 %html
   %head
-    %title snappyco.de
+    %title :snappyco.de => Dave Newman
     
     %link{ :rel => 'openid.server', :href => 'http://www.myopenid.com/server' }
     %link{ :rel => 'openid.delegate', :href => 'http://www.myopenid.com/server' }
@@ -15,7 +15,8 @@
     %h1
       %a{ :href => '/'}
         %img{:src=>"/images/logo.png"}
-      
-    %span#tagline The snappiest of snap
+    
+    %p  
+      %span#tagline Dave Newman's snappiest snaps
     
     = yield
