--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,6 +3,8 @@
   %head
     %title :snappyco.de => Dave Newman
     
+    %link{ :href =>'http://feeds2.feedburner.com/snappycode', :rel => 'alternate' :title => ':snappyco.de => Dave Newman' :type => 'application/atom+xml' }
+    
     %link{ :rel => 'openid.server', :href => 'http://www.myopenid.com/server' }
     %link{ :rel => 'openid.delegate', :href => 'http://www.myopenid.com/server' }
     %link{ :rel => 'openid2.local_id', :href => 'http://davenewman.myopenid.com/' }
