--- a/views/layout.haml
+++ b/views/layout.haml
@@ -3,7 +3,7 @@
   %head
     %title :snappyco.de => Dave Newman
     
-    %link{ :href =>'http://feeds2.feedburner.com/snappycode', :rel => 'alternate' :title => ':snappyco.de => Dave Newman' :type => 'application/atom+xml' }
+    %link{ :href =>'http://feeds2.feedburner.com/snappycode', :rel => 'alternate', :title => ':snappyco.de => Dave Newman', :type => 'application/atom+xml' }
     
     %link{ :rel => 'openid.server', :href => 'http://www.myopenid.com/server' }
     %link{ :rel => 'openid.delegate', :href => 'http://www.myopenid.com/server' }
