--- a/views/screen.sass
+++ b/views/screen.sass
@@ -59,11 +59,12 @@ h1
   :width = !post_width
   
   h3
+    :font-family Arial
+    :font-size 36px
     :color = !link_colour
     :float left
     :margin-right 10px
     :margin-bottom 10px
-    :font-size 40px
     :line-height 50px
     a
       
