--- a/views/screen.sass
+++ b/views/screen.sass
@@ -20,6 +20,7 @@ a:hover
 body
   :font
     :family "Lucida Grande",sans-serif
+    :size 12px
 
 .header
   :height = !header_height
@@ -59,7 +60,7 @@ h1
   :width = !post_width
   
   h3
-    :font-family Arial
+    :font-family Helvetica, Arial
     :font-size 36px
     :color = !link_colour
     :float left
@@ -77,7 +78,7 @@ h1
   .content
     :clear both
     p:first-child
-      :font-size 130%
+      :font-size 150%
     p
       :padding-bottom 1em
       :font-size 120%
