--- a/views/layout.haml
+++ b/views/layout.haml
@@ -27,7 +27,7 @@
     #me
       .entry
         %h2 About Me
-        %p I'm a sydney based software developer interested in building awesome stuff
+        %p I'm a sydney based software developer. I love building awesome stuff.
 
       .entry
         %h2
