--- a/views/screen.sass
+++ b/views/screen.sass
@@ -113,6 +113,7 @@ h1
   :margin-left = !post_margin
   :margin-top =  !post_margin
   :padding-left = !post_margin
+  :padding-right = !post_margin
   :padding-bottom = !post_top_margin
   
   :width 200px
@@ -123,7 +124,7 @@ h1
       :family Helvetica, Arial
       :size 18px
       :weight bold
-    :letter-spacing -2px
+    :letter-spacing -1px
   
     a
       :color #333
@@ -137,6 +138,9 @@ h1
     a.hash_tag
       :color #999
 
+  #about_me p
+
+    
 #footer
   :background-color = !header_colour
   :clear both
