--- a/views/screen.sass
+++ b/views/screen.sass
@@ -112,6 +112,7 @@ h1
   :float left
   :margin-left = !post_margin
   :margin-top =  !post_margin
+  :margin-bottom =  !post_margin
   :padding-left = !post_margin
   :padding-right = !post_margin
   :padding-bottom = !post_top_margin
