--- a/views/screen.sass
+++ b/views/screen.sass
@@ -26,8 +26,8 @@ a:hover
 body
   :background-color = !side_colour
   :font
-    :family "Lucida Grande","Trebuchet MS",arial, sans-serif
-    :size 12px
+    :family "Lucida Grande",Calibri,"Trebuchet MS",arial, sans-serif
+    :size 11px
   :color = !text_colour
 
 .header
