--- a/views/screen.sass
+++ b/views/screen.sass
@@ -26,8 +26,8 @@ a:hover
 body
   :background-color = !side_colour
   :font
-    :family "Lucida Grande",Calibri,"Trebuchet MS",arial, sans-serif
-    :size 11px
+    :family helvetica,arial, sans-serif
+    :size 12px
   :color = !text_colour
 
 .header
@@ -97,7 +97,7 @@ h1
   .content
     :clear both
     p:first-child
-      :font-size 150%
+      :font-size 140%
     p
       :padding-bottom 1em
       :font-size 120%
