--- a/articles/2009-05-30-My-intro-to-Web-Design.haml
+++ b/articles/2009-05-30-My-intro-to-Web-Design.haml
@@ -1,3 +1,4 @@
+-# tags: design 
 :markdown
   For such a snappy dresser I'm a horrible designer. I know what I like, I know what I don't like but given a blank canvas I stare at it for a while, give up, and watch the next episode of Lost. Luckily for me [Andy Clark](http://forabeautifulweb.com/blog/) came to Sydney as part of the [Web Directions Roadshow](http://roadshow09.webdirections.org/) and taught me a few things. I think the biggest gain for me was discovering how much I don't know about design and the things I should focus on to improve. So here are a few great things I got out of the workshop.
 
