--- a/public/css/screen.sass
+++ b/public/css/screen.sass
@@ -76,6 +76,7 @@ h1
   :padding-top = !article_top_margin
   :padding-left = !article_margin
   :padding-right = !article_margin
+  :padding-bottom = !article_margin
   
   h3
     :font
@@ -106,6 +107,10 @@ h1
     strong
       :font-weight bold
       :color #000
+    
+    blockquote
+      :text-align center
+      :font-size 150%
       
 #me
   :background-color #fff
@@ -138,9 +143,6 @@ h1
     
     a.hash_tag
       :color #999
-
-  #about_me p
-
     
 #footer
   :background-color = !header_colour
