--- a/views/show.haml
+++ b/views/show.haml
@@ -1,7 +1,1 @@
-.article
-  %h3
-    = @article.title
-  %p.title-footer=" published on #{@article.date.to_s}"
-
-  .content
-    =render_article @article
+= partial :article, :article => @article, :index => false
