adding disqus comments

--- a/articles/2009-12-28-Fixing-csharp.haml
+++ b/articles/2009-12-28-Fixing-csharp.haml
@@ -12,11 +12,11 @@
   Ever written code like this?
 
 %pre.prettyprint
-  var message = "Hello \"Dave\"";
+  var message = "I heart \"unnecessary\" quotations";
 :markdown
   All that messy quote escaping could be gone if we can quote strings with double or single quotes. We could rewrite that like this:
 
 %pre.prettyprint
-  var message = 'Hello "Dave"';
+  var message = 'I heart "unnecessary" quotations';
 :markdown
   Much nicer!
