--- a/views/layout.haml
+++ b/views/layout.haml
@@ -57,4 +57,18 @@
         pageTracker._trackPageview();
       } catch(err) {}
     
-    %script{:src => '/js/prettify/prettify.js', :type => 'text/javascript'}    
+    :javascript
+      (function() {
+      	var links = document.getElementsByTagName('a');
+      	var query = '?';
+      	for(var i = 0; i < links.length; i++) {
+        	if(links[i].href.indexOf('#disqus_thread') >= 0) {
+        		query += 'url' + i + '=' + encodeURIComponent(links[i].href) + '&';
+        	}
+      	}
+      	document.write('<script charset="utf-8" type="text/javascript" src="http://disqus.com/forums/snappyco/get_num_replies.js' + query + '"></' + 'script>');
+      })();
+    
+    %script{:src => '/js/prettify/prettify.js', :type => 'text/javascript'}
+    
+    
