--- a/views/show.haml
+++ b/views/show.haml
@@ -1,1 +1,6 @@
 = partial :article, :article => @article, :index => false
+
+#disqus_thread
+%script{:type=>"text/javascript", :src=>"http://disqus.com/forums/snappyco/embed.js"}
+%noscript
+  %a{:href=>"http://disqus.com/forums/snappyco/?url=ref"} View the discussion thread.
