--- a/views/show.haml
+++ b/views/show.haml
@@ -1,6 +1,6 @@
 = partial :article, :article => @article, :index => false
 
 #disqus_thread
-%script{:type=>"text/javascript", :src=>"http://disqus.com/forums/snappyco/embed.js"}
+%script{:type=>"text/javascript", :src=>"http://disqus.com/forums/snappycode/embed.js"}
 %noscript
-  %a{:href=>"http://disqus.com/forums/snappyco/?url=ref"} View the discussion thread.
+  %a{:href=>"http://disqus.com/forums/snappycode/?url=ref"} View the discussion thread.
