Added my email address

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -26,24 +26,8 @@
       = yield
     
     #me
-      .entry.photo
-        %img{:src => '/images/me.jpg' }
-
-      #about_me.entry
-        %p I'm a sydney based software developer. I love building awesome stuff.
-
-      .entry
-        %h2
-          %a{ :href => "http://twitter.com/whatupdave"} I'm on Twitter
-        
-        =tweets
-        
-      .entry
-        %h2
-          %a{ :href => "http://github.com/snappycode"} I'm on Github
-
-        =github_repos
-    
+      = partial :me
+      
     #footer
       = partial :footer
       
