--- a/public/css/screen.sass
+++ b/public/css/screen.sass
@@ -30,6 +30,10 @@ body
     :size 12px
   :color = !text_colour
 
+p
+  :padding-bottom 1em
+
+
 .header
   :height = !header_height
   :padding-left = !header_indent
@@ -100,7 +104,6 @@ h1
     p:first-child
       :font-size 140%
     p
-      :padding-bottom 1em
       :font-size 120%
     em
       :font-style italic
