--- a/views/rss.haml
+++ b/views/rss.haml
@@ -9,7 +9,7 @@
         %title=article.title
         %link="http://snappyco.de#{article.url}"
         %description
-          article.html
+          =render_article(article)
           :javascript
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
