--- a/public/css/screen.sass
+++ b/public/css/screen.sass
@@ -24,7 +24,8 @@ a:hover
   :text-decoration underline
 
 body
-  :background-color = !side_colour
+  :background-color #EBEBEB
+  :background-image url(/images/bg.png)
   :font
     :family helvetica,arial, sans-serif
     :size 12px
@@ -74,6 +75,7 @@ h1
 .article
   :clear both
   :background-color #fff
+  :-webkit-box-shadow #CCC 0px 0px 10px
 
   :margin-top = !article_margin
   :margin-bottom = !article_margin
@@ -117,6 +119,7 @@ h1
       
 #me
   :background-color #fff
+  :-webkit-box-shadow #CCC 0px 0px 10px
   :float left
   :margin-left = !article_margin
   :margin-top =  !article_margin
