--- a/public/css/screen.sass
+++ b/public/css/screen.sass
@@ -116,6 +116,9 @@ h1
     blockquote
       :text-align center
       :font-size 150%
+    
+    .small
+      :font-size 130%
       
 #me
   :background-color #fff
