--- a/articles/2010-01-07-assert-awesomely.haml
+++ b/articles/2010-01-07-assert-awesomely.haml
@@ -48,7 +48,7 @@
 :markdown
   Not bad if I do say so myself.
   
-  And here's the code (Feel free to fork and improve). [http://gist.github.com/252084.js?file=AwesomeTestExtensions.cs](http://gist.github.com/252084.js?file=AwesomeTestExtensions.cs)
+  And here's the code (Feel free to fork and improve). [http://gist.github.com/252084](http://gist.github.com/252084)
 
 %script{:src=>"http://gist.github.com/252084.js?file=AwesomeTestExtensions.cs"}
   
