Stole chris's atom feed code

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -19,7 +19,7 @@
       %h1
         %a{ :href => '/'} snappyco.de
       .sub_heading
-        %a.rss{ :href => '/rss.xml' }
+        %a.rss{ :href => 'http://feeds2.feedburner.com/snappycode' }
           %img{ :src => '/images/rss.png', :alt => 'rss'}
     
     #articles
