--- a/public/css/screen.sass
+++ b/public/css/screen.sass
@@ -1,4 +1,3 @@
-
 !page_width = 1000px
 !article_width = 700px
 !side_bar_width = !page_width - !article_width
@@ -39,7 +38,8 @@ p
   :height = !header_height
   :padding-left = !header_indent
   :background-color = !header_colour
-
+  :min-width = !page_width + !article_margin
+  
   .sub_heading
     :position relative
     :float left
@@ -66,6 +66,9 @@ h1
 #tagline
   :float right
   :color #343
+
+#container
+  :min-width = !page_width + !article_margin
 
 #articles
   :float left
@@ -113,10 +116,27 @@ h1
       :font-weight bold
       :color #000
     
+    pre 
+      code
+        :display block
+        :padding-top 1em
+        :padding-bottom 1em
+        :margin-left = !article_margin * -1
+        :margin-right = !article_margin * -1
+        :margin-bottom 1em
+        :padding-left = !article_margin
+        :background-color #ddddff
+        :border-top 1px solid #ccc
+        :border-bottom 1px solid #ccc
+        :font-family Monaco, consolas, monospace
+        :font-size 120%
+      
     blockquote
-      :text-align center
-      :font-size 150%
-    
+      :margin 1em 2em
+      :padding 3px
+      :color #575757
+      :font-style italic
+      
     .small
       :font-size 130%
       
