added kick it to shouldly

--- a/articles/2010-02-02-shouldly.haml
+++ b/articles/2010-02-02-shouldly.haml
@@ -102,3 +102,6 @@
   Just download or git clone [http://github.com/snappycode/shouldly](http://github.com/snappycode/shouldly) and either include it the source in your project or run msbuild and copy the dll into your repository.
 
   Oh and feel free to fork and improve friends, let's all help each other out.
+  
+%a(href="http://www.dotnetkicks.com/kick/?url=http%3a%2f%2fsnappyco.de%2farticles%2f2010-02-02-shouldly")
+  %img(src="http://www.dotnetkicks.com/Services/Images/KickItImageGenerator.ashx?url=http%3a%2f%2fsnappyco.de%2farticles%2f2010-02-02-shouldly" border="0" alt="kick it on DotNetKicks.com")
